KO-387: 내 정보 조회